--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "better-python-driver"
+name = "scylla-python-driver"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "better_python_driver"
+name = "scylla"
 crate-type = ["cdylib"]
 
 [dependencies]
