--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=0.12,<0.13"]
 build-backend = "maturin"
 
 [project]
-name = "better-python-driver"
+name = "scylla-python-driver"
 requires-python = ">=3.6"
 classifiers = [
     "Programming Language :: Rust",
